Proof reason has ranges as sources, not only lines