@@ -6,7 +6,7 @@ import com.dan323.proof.generic.proof.ProofReason;
 import com.dan323.proof.generic.proof.ProofStep;
 import com.dan323.proof.generic.proof.ProofStepSupplier;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.function.BinaryOperator;
 
@@ -34,14 +34,14 @@ public abstract class OrI<T extends LogicOperation, Q extends ProofStep<T>, P ex
     public void applyStepSupplier(P pf, ProofStepSupplier<T, Q> supp) {
         int assLevel = 0;
         if (!pf.getSteps().isEmpty()) {
-            assLevel = pf.getSteps().get(pf.getSteps().size() - 1).getAssumptionLevel();
+            assLevel = pf.getSteps().getLast().getAssumptionLevel();
         }
         T result = disjunction.apply(pf.getSteps().get(applyAt - 1).getStep(), intro);
         pf.getSteps().add(supp.generateProofStep(assLevel, result, getReason()));
     }
 
     private ProofReason getReason() {
-        return new ProofReason("|I", Collections.singletonList(applyAt));
+        return new ProofReason("|I", List.of(), List.of(applyAt));
     }
 
     protected int getAt() {
