@@ -154,18 +154,18 @@ public class RuleOrTest {
         OrEStub orE = new RuleOrTest.OrEStub(1, 2, 2);
         orE.applyStepSupplier(pf, ProofStep::new);
 
-        assertEquals(new ProofReason("|E", List.of(1, 2, 2)), record.get(0).getProof());
-        assertEquals(1, record.get(0).getAssumptionLevel());
-        assertEquals("P", record.get(0).getStep().toString());
-        Assertions.assertTrue(record.get(0).isValid());
+        assertEquals(new ProofReason("|E", List.of(), List.of(1, 2, 2)), record.getFirst().getProof());
+        assertEquals(1, record.getFirst().getAssumptionLevel());
+        assertEquals("P", record.getFirst().getStep().toString());
+        Assertions.assertTrue(record.getFirst().isValid());
     }
 
     @Test
     public void orIApplyTest() {
         List<ProofStep<LogicOperation>> record = new ArrayList<>();
         doReturn(list).when(pf).getSteps();
-        doReturn(1).when(list).size();
         doReturn(pStep0).when(list).get(eq(0));
+        doReturn(pStep0).when(list).getLast();
         doReturn(1).when(pStep0).getAssumptionLevel();
         Variable variable = mock(Variable.class, Answers.CALLS_REAL_METHODS);
         doReturn("P").when(variable).toString();
@@ -175,10 +175,10 @@ public class RuleOrTest {
         OrIStub orI = new RuleOrTest.OrIStub(1, variable);
         orI.applyStepSupplier(pf, ProofStep::new);
 
-        assertEquals(new ProofReason("|I", List.of(1)), record.get(0).getProof());
-        assertEquals(1, record.get(0).getAssumptionLevel());
-        assertEquals("P | P", record.get(0).getStep().toString());
-        Assertions.assertTrue(record.get(0).isValid());
+        assertEquals(new ProofReason("|I", List.of(), List.of(1)), record.getFirst().getProof());
+        assertEquals(1, record.getFirst().getAssumptionLevel());
+        assertEquals("P | P", record.getFirst().getStep().toString());
+        Assertions.assertTrue(record.getFirst().isValid());
     }
 
     public static class OrIStub extends OrI<LogicOperation, ProofStep<LogicOperation>, ProofTest.ProofStub> {
